ocp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-api-service
  template:
    metadata:
      labels:
        app: transaction-api-service
    spec:
      containers:
        - name: transaction-api-service
          image: docker.io/saundharpreet/transaction-api-service:1.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
