ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-api-service
spec:
  selector:
    app: transaction-api-service
  ports:
    - port: 80
      targetPort: 8080
